# django_polls

./: .gitignore  .readthedocs.yaml  README.rst  pyproject.toml  pytest.ini
.github/workflows/: pytest.yaml
docs/source/: conf.py  index.rst
polls/: __init__.py  admin.py
polls/migrations/: 0001_initial.py
tasks/: __init__.py  docs.py
